# family-account-book

./: .gitignore  README.md  build_app.sh  family_account_book.db  main.py  migrate_db.py  pyproject.toml  requirements.txt  setup.cfg  test_app.sh  test_person.py  使用说明.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
family_account_book/: __init__.py  __main__.py  database.py
family_account_book/controllers/: main_controller.py
family_account_book/models/: __init__.py
family_account_book/services/: analytics.py  export.py  repository.py
family_account_book/views/: main_window.py
specs/001-family-account-book/: spec.md
specs/001-family-account-book/checklists/: requirements.md
tests/unit/: test_analytics.py
